# ArchHubQt

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.cursor/rules/: archhub-general.mdc  project-structure.mdc  python-archhub.mdc  qml-archhub.mdc  qtwidgets-archhub.mdc
docs/: PROJECT_REQUIREMENTS.md  PROJECT_STRUCTURE.md
packaging/aur/: PKGBUILD
src/archhub/: __init__.py  cli.py  main.py
src/archhub/app/: __init__.py  ui_loader.py  viewmodel.py
src/archhub/backends/: __init__.py  base.py  pacman.py  paru.py
src/archhub/core/: __init__.py  aur_rpc.py  cache_db.py  cache_models.py  cache_repository.py  models.py  runner.py
src/archhub/core/parsing/: __init__.py  pacman.py  paru.py  pkgbuild.py
src/archhub/services/: __init__.py  maintenance_service.py  package_service.py  settings_service.py  updates_service.py
src/archhub/ui/: __init__.py  main_window.py  style.qss  styles.py  widgets.py
src/archhub/ui.old/: main_window.py
src/archhub/ui.old/pages/: cache_page.py  orphans_page.py  settings_page.py  updates_page.py
src/archhub/ui/pages/: __init__.py  mirrors_page.py  orphans_page.py  packages_page.py  updates_page.py
src/tools/: __init__.py  performance_tools.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/app/: __init__.py  test_ui_loader.py  test_viewmodel.py
tests/unit/backends/: __init__.py  test_registry.py
tests/unit/core/: __init__.py  test_aur_rpc.py  test_cache_repository.py  test_models.py  test_runner.py
tests/unit/services/: test_package_service.py  test_updates_service.py
(+19 files in other folders)
