[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archhub"
version = "0.1.0"
description = "Arch Linux package manager with pacman and AUR helper support"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-qt>=4",
]

[project.scripts]
archhub = "archhub.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
