[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archhub"
version = "0.1.0"
description = "Arch Linux package manager with pacman and AUR helper support"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "pyside6>=6.10.2",
    "sqlmodel>=0.0.37",
]

[project.scripts]
archhub = "archhub.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]
